Fixed: overflowing tables on small screens (#3819)
* fix

* overflow-x

* a better fix, that fix all tables

* Revert "a better fix, that fix all tables"

This reverts commit 3bc94473474607415e30e2056899975421fb8a01.

* user list table with wrapper

* scrolling table: extension table

--- a/p/themes/base-theme/template.css
+++ b/p/themes/base-theme/template.css
@@ -173,6 +173,10 @@ button.as-link[disabled] {
 }
 
 /*=== Tables */
+.table-wrapper {
+	overflow-x: auto;
+}
+
 table {
 	max-width: 100%;
 }
@@ -208,6 +212,7 @@ td.numeric {
 .form-group .group-controls {
 	min-width: 250px;
 	margin: 0 0 0 220px;
+	overflow-x: auto;
 }
 
 .form-group .group-controls .control {
